fix: gaps at various heights

--- a/components/main/main.module.scss
+++ b/components/main/main.module.scss
@@ -19,6 +19,8 @@
         gap: calc(var(--line-height) * 4);
     }
 
+    @include utilities.gaps();
+
     &.col-2 {
         .left,
         .right {
